# sol2seq

./: .gitignore  Cargo.toml  GITHUB_README.md  README.md  with_storage.md  without_storage.md
examples/: basic_usage.rs
examples/output/: example_diagram.md
examples/solidity_examples/: SimpleStorage.sol  TokenContract.sol
samples/: SimpleToken.sol  SimpleVault.sol
src/: ast.rs  diagram.rs  lib.rs  main.rs  types.rs  utils.rs
