[package]
name = "sol2seq"
version = "0.2.0"
edition = "2021"
description = "Sequence diagram generator for Solidity contracts"
authors = ["sumitvekariya"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sumitvekariya/sol2seq"
keywords = ["solidity", "diagram", "sequence", "ethereum", "smart-contract"]
categories = ["command-line-utilities", "development-tools", "visualization"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.3", features = ["derive"] }
anyhow = "1.0.81"
regex = "1.10.3"
log = "0.4.21"
env_logger = "0.11.2"
itertools = "0.14.0"
indexmap = { version = "2.2.5", features = ["serde"] }
tempfile = "3.10.1"

[lib]
name = "sol2seq"
path = "src/lib.rs"

[[bin]]
name = "sol2seq"
path = "src/main.rs"
